Fixed issue with copyright not showing properly on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ hr {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 .heading {
@@ -76,7 +77,7 @@ hr {
   margin: auto;
   left: 0;
   right: 0;
-  z-index: -1;
+  z-index: 1;
   color: #FFFFFF;
 }
 
